# snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
src/: CMakeLists.txt  Makefile  constants.h  food.c  food.h  main.c  point.h  run_game.c  show_help.c  show_version.c  snake.c  snake.h  wall.c  wall.h
